# a2_mini

./: .gitignore  LICENSE  README.md  dependencies.repos
camera_avoid/: package.xml  setup.cfg  setup.py
camera_avoid/camera_avoid/: camera_avoid_node.py
car_mission/: README.md  package.xml  setup.cfg  setup.py
car_mission/car_mission/: car_tracker.py  car_tracking.py  cctv_detector.py  dori_search_car.py  mission_manager.py  mission_orchestrator.py  topview_undock.py  undock_navigator.py  usb_car_undock.py  yolo_depth_detector.py
car_mission/config/: mission.yaml
car_mission/launch/: mission.launch.py  mission_sequence.launch.py  undock_mission.launch.py
docs/: list_to_fix.md  yolo_depth_and_approach_handoff.md
gazebo_simulation/: README.md  package.xml  setup.py
gazebo_simulation/gui/: gui.config
gazebo_simulation/launch/: ignition.launch.py  turtlebot4_empty_world.launch.py
gazebo_simulation/worlds/: empty.sdf  flat_obstacles.sdf  tracking_world.sdf
main_real/: package.xml  setup.cfg  setup.py  usb_car_undock.py
main_sim/: README.md  package.xml  setup.cfg  setup.py
make_map/: package.xml  setup.cfg  setup.py
map/: robot2_map.yaml
move_p1/: package.xml  setup.cfg  setup.py
rokey_pjt/: package.xml  setup.py
scripts/: a2_mini_env.bash  install_deps.sh
sim_main/: README.md  package.xml  setup.cfg  setup.py
tracking/: README.md  package.xml  setup.py
turtlebot4_beep/: package.xml  setup.py
turtlebot4_capture/: package.xml  setup.cfg  setup.py
turtlebot4_capture/turtlebot4_capture/: 2_1_a_capture_wc_image.py  2_1_b_cont_capture_wc_image.py  2_1_c_capture_wc_thread.py  2_1_d_capture_image.py  2_1_e_cont_capture_image.py
turtlebot4_image/: package.xml  setup.cfg  setup.py
turtlebot4_yolo/: README.md  package.xml  setup.py
turtlebot4_yolo/launch/: yolo.launch.py
turtlebot4_yolo/models/: README.md
turtlebot4_yolo/turtlebot4_yolo/: yolo_depth_detector.py  yolo_detector.py
yolo/: .gitignore  yolo8n.py  yolo8s.py
(+432 files in other folders)
