<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_yolo</name>
  <version>0.0.0</version>
  <description>TurtleBot4 OAK-D 카메라 영상에 YOLO(best.pt) 추론을 적용해 bounding box 이미지를 발행/구독하는 미니프로젝트 패키지</description>
  <maintainer email="sunq0726@gmail.com">sungyu</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <!-- ultralytics(YOLO)는 rosdep 키가 없어 pip로 설치: pip install ultralytics -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
